# interfone

./: CMakeLists.txt  RENDER_ENV_VARS.txt  STATE_OF_PROJECT.md  build_firmware.bat  check_sw_domains.py  do_build.bat  do_flash.bat  get_transcript.py  patch_sdkconfig.py  sdkconfig  setup_sip.py  test_sip_api.py  test_sip_register.py
docs/: HISTORY.md
main/: CMakeLists.txt  app_main.c  minuto_esp32.raw  ola_esp32.raw  wifi_setup.c  wifi_setup.h
server/: Procfile  abrir_interfone.bat  ack_universal.raw  convert_final.py  generate_elevenlabs.py  generate_offline_audios.py  ia_voz.raw  iniciar_remoto.bat  listen_audios.py  render.yaml  requirements.txt  resp_abrir.raw  resp_aguarde.raw  resp_ausente.raw  resp_claudia.raw  resp_descendo.raw  resp_erro.raw  resp_ligia.raw  resp_mauricio.raw  resposta_ia.raw  saudacao_c497.raw  server.py  server_test.py  simulate_app.py  test_audio.py
server/static/: index.html  manifest.json  sw.js
